src/components/button/button.css
.btn {
  border: none;
  cursor: pointer;
  padding: .5rem 1.2rem;
  color: black;
}

.btn--disabled {
  opacity: .5;
  cursor: default;
}

.btn--outline {
  background: transparent;
  box-shadow: inset 0 0 0 .1rem white;
  color: white;
}

.btn--circular {
  text-align: center;
  position: relative;
  border-radius: 50%;
  min-width: 1.25em;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
}

.btn--circular:after {
  content: '';
  padding-top: 100%;
  display: table;
}

.btn--danger {
  background-color: red;
  color: white;
}

.btn--primary {
  background-color: #007bff;
  color: white;
}

.btn--see-through {
  background-color: rgba(0, 0, 0, .5);
  color: white;
}

